@@ -1,0 +1,17 @@
+package it.uniroma2.art.semanticturkey.services;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/**
+ * Marks a field of an exception for inclusion in the response returned to the client
+ */
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+@Documented
+public @interface ExceptionFacet {
+    String value();
+}
