@@ -1,6 +1,7 @@
 version 11.1.1
 date: dd/mm/202y
   * improved the OntoPortal connector to consider the frontend base URL and retrieve missing settings from /site_config
+  * improved the OntoPortal deployer to identify violations of constraints on data structure and then try to propose fixes
   * added a Deployer targeting ShowVoc
   * added an exporter for a selected scheme
   * fixed a bug related to an exception about the use of abstract datasets erroneously raised in assisted search when
